--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,11 @@
     </div>
     <main>
         <h1>Tic-Tac-Toe</h1>
+        <div class="room-container">
+            <input type="text" id="room-input" placeholder="Enter Room ID">
+            <button id="join-btn">Join Room</button>
+            <button id="create-btn">Create Room</button>
+        </div>
         <div class="container">
             <div class="game">
                 <button class="box"></button>
